fix for textarea border on firefox

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -2546,7 +2546,7 @@ i.status-indicator-dot {
 				margin: 10px 0;
 
 				textarea {
-					border-color: lightgrey;
+					border: 1px solid lightgray;
     				border-radius: 5px;
 					padding: 10px;
 				}
